[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usepolvo-core"
version = "0.1.0"
description = "A requests-style SDK for APIs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["httpx>=0.23.0"]
license = "MIT"
[[project.authors]]
name = "Caio Pizzol"
email = "hi@usepolvo.com"

[project.optional-dependencies]
dev = ["black", "isort", "mypy", "pytest", "pytest-cov", "pytest-asyncio"]
docs = ["sphinx", "sphinx-rtd-theme"]
all = ["usepolvo-core[dev,docs]"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=2 -ra"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "performance: marks tests as performance tests",
]
